Small style fix to prevent overlapping text

--- a/app/assets/stylesheets/accessibility.sass
+++ b/app/assets/stylesheets/accessibility.sass
@@ -1820,7 +1820,6 @@ span.info
     float: right
     font-size: .9em
     width: 100%
-    margin-top: -5px
     a
       color: $darker_gray
       text-decoration: none
@@ -1843,6 +1842,7 @@ ul.glossary li
 ul.glossary li+li
   border-top: 1px dotted $light_blue
   padding-top: 10px
+  margin-top: 5px
 ul.glossary li, .info.tip
   dt
     color: $darker_blue
